# RAG

./: .gitignore  1.0_RAG_With_Own_Text.ipynb  2.0_RAG_PDF.ipynb  3.0_RAG_Local.ipynb  4.0_RAG_Add_Docs.ipynb  pyproject.toml  requirements.txt
